# Check compiler flags
#include(CheckCXXCompilerFlag)

# Include current dir
set(CMAKE_INCLUDE_CURRENT_DIR ON)

# =======================================================================
# Add subdirectories
# =======================================================================

add_subdirectory(test)
